feat: base frontend app created

--- a/apps/client/src/app/app.component.html
+++ b/apps/client/src/app/app.component.html
@@ -1,2 +1,9 @@
-<trip-planner-nx-welcome></trip-planner-nx-welcome>
-<router-outlet></router-outlet>
+<div>
+  <div class="absolute z-50 h-screen bg-white p-8 w-1/4">
+    <p class="text-xl font-bold mb-5">Trip Planner</p>
+    <trip-planner-search></trip-planner-search>
+  </div>
+  <div class="z-10">
+    <trip-planner-map></trip-planner-map>
+  </div>
+</div>
