--- a/apps/client/src/shared/components/trip-search/trip-search.component.html
+++ b/apps/client/src/shared/components/trip-search/trip-search.component.html
@@ -40,34 +40,39 @@
     List of connected routes you can use to travel the shortest distance to
     cover each continent are shown below.
   </p>
-  <ng-container *ngFor="let item of trips; let i = index; last as l">
-    <div class="bg-white p-4 shadow-sm mt-5 rounded-lg" *ngIf="!l">
-      <div class="flex items-center justify-between">
-        <!-- <div class="h-6 w-6 rounded-full border-2 border-bop bg-bop mr-2"></div> -->
-        <div>
-          <p class="text-md font-semibold">
-            {{ item.name }}
-          </p>
-          <small class="text-sm font-medium text-gray-500">{{
-            item.contId | enumFormatter
-          }}</small>
-        </div>
+  <div class="max-h-50 overflow-y-auto">
+    <ng-container *ngFor="let item of trips; let i = index; last as l">
+      <div class="bg-white p-4 shadow-sm mt-5 rounded-lg" *ngIf="!l">
+        <div class="flex items-center justify-between">
+          <!-- <div class="h-6 w-6 rounded-full border-2 border-bop bg-bop mr-2"></div> -->
+          <div>
+            <p class="text-md font-semibold">
+              {{ item.name }}
+            </p>
+            <small class="text-sm font-medium text-gray-500">{{
+              item.contId | enumFormatter
+            }}</small>
+          </div>
 
-        <img
-          class="h-5 invert"
-          src="http://www.freeiconspng.com/uploads/description-white-plane-icon-2-27.png"
-          alt=""
-        />
+          <img
+            class="h-5 invert"
+            src="http://www.freeiconspng.com/uploads/description-white-plane-icon-2-27.png"
+            alt=""
+          />
 
-        <div>
-          <p class="text-md font-semibold">
-            {{ trips[i + 1].name }}
-          </p>
-          <small class="text-sm font-medium text-gray-500">{{
-            trips[i + 1].contId | enumFormatter
-          }}</small>
+          <div>
+            <p class="text-md font-semibold">
+              {{ trips[i + 1].name }}
+            </p>
+            <small class="text-sm font-medium text-gray-500">{{
+              trips[i + 1].contId | enumFormatter
+            }}</small>
+          </div>
         </div>
+        <pre class="mt-2 font-semibold font-md">
+Distance: {{ trips[i].distance | number: '1.2-2' }} KM</pre
+        >
       </div>
-    </div>
-  </ng-container>
+    </ng-container>
+  </div>
 </div>
