feat: UI improved

--- a/apps/client/src/app/app.component.html
+++ b/apps/client/src/app/app.component.html
@@ -2,6 +2,7 @@
   <div
     class="absolute z-50 h-screen bg-white p-8 w-1/4 bg-clip-padding backdrop-filter backdrop-blur-xl bg-opacity-60 border border-gray-200"
   >
+    <p class="text-xl font-bold text-gray-700 mb-2">Trip Planner</p>
     <trip-planner-search
       (emitSelectedCity)="selectedCity($event)"
     ></trip-planner-search>
