--- a/apps/client/src/shared/components/trip-search/trip-search.component.html
+++ b/apps/client/src/shared/components/trip-search/trip-search.component.html
@@ -35,12 +35,12 @@
 </div>
 
 <div class="mt-5" *ngIf="trips">
-  <p class="text-lg font-bold text-gray-800">Routes</p>
-  <p class="text-md font-normal text-gray-600">
+  <p class="text-md font-bold text-gray-800">Routes</p>
+  <p class="text-sm font-normal text-gray-600">
     List of connected routes you can use to travel the shortest distance to
     cover each continent are shown below.
   </p>
-  <div class="max-h-50 overflow-y-auto">
+  <div class="h-4/5 overflow-y-auto">
     <ng-container *ngFor="let item of trips; let i = index; last as l">
       <div class="bg-white p-4 shadow-sm mt-5 rounded-lg" *ngIf="!l">
         <div class="flex items-center justify-between">
