--- a/apps/client/src/shared/components/trip-search/trip-search.component.html
+++ b/apps/client/src/shared/components/trip-search/trip-search.component.html
@@ -45,8 +45,11 @@
       <div class="bg-white p-4 shadow-sm mt-5 rounded-lg" *ngIf="!l">
         <div class="flex items-center justify-between">
           <!-- <div class="h-6 w-6 rounded-full border-2 border-bop bg-bop mr-2"></div> -->
-          <div (click)="selected(item)" class="cursor-pointer hover:scale-105">
-            <p class="text-md font-semibold">
+          <div
+            (click)="selected(item)"
+            class="cursor-pointer hover:scale-105 hover:text-indigo-500"
+          >
+            <p class="text-md font-semibold hover:text-indigo-500">
               {{ item.name }}
             </p>
             <small class="text-sm font-medium text-gray-500">{{
@@ -62,9 +65,9 @@
 
           <div
             (click)="selected(trips[i + 1])"
-            class="cursor-pointer hover:scale-105"
+            class="cursor-pointer hover:scale-105 hover:text-indigo-500"
           >
-            <p class="text-md font-semibold">
+            <p class="text-md font-semibold hover:text-indigo-500">
               {{ trips[i + 1].name }}
             </p>
             <small class="text-sm font-medium text-gray-500">{{
