--- a/apps/client/src/app/app.component.html
+++ b/apps/client/src/app/app.component.html
@@ -2,7 +2,11 @@
   <div
     class="absolute z-50 h-screen bg-white p-8 w-1/4 bg-clip-padding backdrop-filter backdrop-blur-xl bg-opacity-60 border border-gray-200"
   >
-    <p class="text-xl font-bold text-indigo-700 mb-2">Trip Planner</p>
+    <p
+      class="text-4xl font-bold font-extrabold text-transparent text-8xl bg-clip-text bg-gradient-to-r from-purple-400 to-pink-600 mb-8"
+    >
+      Trip Planner
+    </p>
     <trip-planner-search
       (emitSelectedCity)="selectedCity($event)"
     ></trip-planner-search>
