--- a/apps/client/src/app/app.component.html
+++ b/apps/client/src/app/app.component.html
@@ -3,7 +3,7 @@
     class="absolute z-50 h-screen bg-white p-8 w-2/6 bg-clip-padding backdrop-filter backdrop-blur-xl bg-opacity-60 border border-gray-200"
   >
     <p
-      class="text-4xl font-bold font-extrabold text-transparent text-8xl md:text-9xl bg-clip-text bg-gradient-to-r from-purple-400 to-pink-600 mb-8"
+      class="text-4xl font-bold font-extrabold text-transparent text-8xl bg-clip-text bg-gradient-to-r from-purple-400 to-pink-600 mb-8"
     >
       Trip Planner
     </p>
