--- a/apps/client/src/shared/components/trip-search/trip-search.component.html
+++ b/apps/client/src/shared/components/trip-search/trip-search.component.html
@@ -40,7 +40,7 @@
     List of connected routes you can use to travel the shortest distance to
     cover each continent are shown below.
   </p>
-  <div class="hf overflow-y-auto">
+  <div class="hm xl:hf overflow-y-auto">
     <ng-container *ngFor="let item of trips; let i = index; last as l">
       <div class="bg-white p-4 shadow-sm mt-5 rounded-lg" *ngIf="!l">
         <div class="flex items-center justify-between">
