--- a/apps/client/src/app/app.component.html
+++ b/apps/client/src/app/app.component.html
@@ -1,9 +1,9 @@
 <div>
   <div
-    class="absolute z-50 h-screen bg-blue-100 p-8 w-2/6 bg-clip-padding backdrop-filter backdrop-blur-xl bg-opacity-60 border border-gray-200"
+    class="absolute z-50 h-screen bg-gray-800 p-8 w-2/6 bg-clip-padding backdrop-filter backdrop-blur-xl bg-opacity-60 border border-gray-800"
   >
     <p
-      class="text-4xl font-bold font-extrabold text-transparent text-8xl bg-clip-text bg-gradient-to-r from-purple-600 to-indigo-600 mb-8"
+      class="text-4xl font-bold font-extrabold text-transparent text-8xl bg-clip-text bg-gradient-to-r from-gray-400 to-black-200 mb-8"
     >
       Trip Planner
     </p>
